<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/product_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/price_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/quantity_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <Button
        android:id="@+id/sale_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale"
        android:focusable="true"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"/>
</LinearLayout>
