<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elbossily.inventory.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout style="@style/ContainerLinearLayout">

                <TextView
                    style="@style/Label_Text_Style"
                    android:text="@string/product_name" />

                <EditText
                    android:id="@+id/product_name_id"
                    style="@style/Field_Text_style"
                    android:hint="@string/product_name" />
            </LinearLayout>

            <LinearLayout style="@style/ContainerLinearLayout">

                <TextView
                    style="@style/Label_Text_Style"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/price_id"
                    style="@style/Field_Text_style"
                    android:hint="@string/price"
                    android:inputType="number" />
                    />
            </LinearLayout>

            <TextView
                style="@style/Label_Text_Style"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity" />

            <LinearLayout style="@style/ContainerLinearLayout">

                <Button
                    android:id="@+id/plus_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_id"
                    style="@style/Field_Text_style"
                    android:layout_marginRight="16dp"
                    android:hint="@string/quantity" />

                <Button
                    android:id="@+id/minus_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout style="@style/ContainerLinearLayout">

                <TextView
                    style="@style/Label_Text_Style"
                    android:text="@string/supplier" />

                <EditText
                    android:id="@+id/supplier_name_id"
                    style="@style/Field_Text_style"
                    android:hint="@string/supplier" />
            </LinearLayout>

            <LinearLayout style="@style/ContainerLinearLayout">

                <TextView
                    style="@style/Label_Text_Style"
                    android:text="@string/supplier_phone" />

                <EditText
                    android:id="@+id/phone_id"
                    style="@style/Field_Text_style"
                    android:hint="@string/supplier_phone"
                    android:inputType="phone" />

                <ImageButton
                    android:id="@+id/phone_button_id"
                    style="@style/Label_Text_Style"
                    android:layout_marginLeft="16dp"
                    android:src="@android:drawable/sym_action_call" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>